Hide Jackson in internal package. Test Owner as Json in Demo module.