@@ -1,2 +1,7 @@
 # java-modules-demo
 Demonstrate how to include two different versions of transitive dependencies using Java Modules.
+
+## VM options
+```
+ --add-modules=java.se
+```
